Prepare boilerplate for the project
Added prop-types and updated other dependencies, basic scss structure and fixed devtools plugins

--- a/app/components/Home.scss
+++ b/app/components/Home.scss
@@ -1,8 +1,12 @@
+@import '../styles/vars';
+
 .container {
   position: absolute;
   top: 30%;
   left: 10px;
   text-align: center;
+
+  background-color: $primary;
 }
 
 .container h2 {
