--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -2,3 +2,16 @@
  * @NOTE: Prepend a `~` to css file paths that are in your node_modules
  *        See https://github.com/webpack-contrib/sass-loader#imports
  */
+@import './styles/vars';
+
+// normalize.css resets
+@import './styles/_normalize.css';
+
+// FONT-FACES
+@import './styles/fontface';
+
+// GLOBAL STYLES
+@import './styles/main';
+
+// Modules
+@import '~@fortawesome/fontawesome-free/css/all.css';
