--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -3,17 +3,20 @@
  */
 
 // COLORS
-$color-primary: #d19c1d;
+//$color-primary: #d19c1d;
+$color-primary: #2185d0;
 $color-primary-light: lighten($color-primary, 13%);
 $color-primary-dark: darken($color-primary, 13%);
 
-$color-secondary: #7d451b;
+//$color-secondary: #7d451b;
+$color-secondary: #6435c9;
 $color-secondary-light: lighten($color-secondary, 13%);
 $color-secondary-dark: darken($color-secondary, 13%);
 
 // Other colors
 $color-white: #fff;
 $color-black: #212121;
+$color-transparent: transparentize($color-black, 0.6);
 
 // FONTS
 // font faces are in app.global.scss
