Add ability to remove sounds

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,6 +15,7 @@
 @import 'modules/color-shorthands';
 @import 'modules/border';
 @import 'modules/text';
+@import 'modules/common';
 
 // Modules
 @import '~@fortawesome/fontawesome-free/css/all.css';
