--- a/app/styles/modules/_flex.scss
+++ b/app/styles/modules/_flex.scss
@@ -11,6 +11,17 @@
   }
 }
 
+.wrap {
+  flex-wrap: wrap;
+
+  &-reverse {
+    flex-wrap: wrap-reverse;
+  }
+  &-nowrap {
+    flex-wrap: nowrap;
+  }
+}
+
 .col {
   flex-direction: column;
   &-reverse {
