--- a/app/styles/_fontface.scss
+++ b/app/styles/_fontface.scss
@@ -1,6 +1,28 @@
 // FONT FACES
 // !! url paths should be relative to app/ !!
 
+/*
+ * OPEN SANS
+ */
+
+// Light
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Open Sans Light'), local('OpenSans-Light'),
+    url('./fonts/OpenSans-Light.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 300;
+  src: local('Open Sans Light Italic'), local('OpenSans-LightItalic'),
+    url('./fonts/OpenSans-LightItalic.ttf') format('ttf');
+}
+
+// Regular
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
@@ -11,6 +33,15 @@
 
 @font-face {
   font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 400;
+  src: local('Open Sans Italic'), local('OpenSans-Italic'),
+    url('./fonts/OpenSans-Italic.ttf') format('ttf');
+}
+
+// SemiBold
+@font-face {
+  font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
   src: local('Open Sans SemiBold'), local('OpenSans-SemiBold'),
@@ -19,12 +50,51 @@
 
 @font-face {
   font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 600;
+  src: local('Open Sans SemiBold Italic'), local('OpenSans-SemiBoldItalic'),
+    url('./fonts/OpenSans-SemiBoldItalic.ttf') format('ttf');
+}
+
+// Bold
+@font-face {
+  font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
   src: local('Open Sans Bold'), local('OpenSans-Bold'),
     url('./fonts/OpenSans-Bold.ttf') format('ttf');
 }
 
+@font-face {
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 700;
+  src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'),
+    url('./fonts/OpenSans-BoldItalic.ttf') format('ttf');
+}
+
+/*
+ * ROBOTO
+ */
+
+// Light
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Roboto Light'), local('Roboto-Light'),
+    url('./fonts/Roboto-Light.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 300;
+  src: local('Roboto Light Italic'), local('Roboto-LightItalic'),
+    url('./fonts/Roboto-LightItalic.ttf') format('ttf');
+}
+
+// Normal
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
@@ -35,6 +105,15 @@
 
 @font-face {
   font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 400;
+  src: local('Roboto Italic'), local('Roboto-Italic'),
+    url('./fonts/Roboto-Italic.ttf') format('ttf');
+}
+
+// Medium
+@font-face {
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
   src: local('Roboto Medium'), local('Roboto-Medium'),
@@ -43,8 +122,25 @@
 
 @font-face {
   font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 500;
+  src: local('Roboto Medium Italic'), local('Roboto-MediumItalic'),
+    url('./fonts/Roboto-MediumItalic.ttf') format('ttf');
+}
+
+// Bold
+@font-face {
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
   src: local('Roboto Bold'), local('Roboto-Bold'),
     url('./fonts/Roboto-Bold.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: italic;
+  font-weight: 700;
+  src: local('Roboto Bold Italic'), local('Roboto-BoldItalic'),
+    url('./fonts/Roboto-BoldItalic.ttf') format('ttf');
 }
