--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -19,6 +19,7 @@ $color-secondary-dark: darken($color-secondary, 13%);
 // Other colors
 $color-white: #fff;
 $color-black: #212121;
+$color-gray: lighten($color-black, 38%);
 $color-transparent: transparentize($color-black, 0.6);
 
 // NOTE: all exported variables should be prefixed with 'var' to allow for stylelint whitelisting
@@ -77,7 +78,7 @@ $font-secondary-bold: 700;
 $card-margin: 3px;
 $card-padding: 5px;
 
-$sidebar-width: 25%;
+$sidebar-width: 26%;
 $sidebar-max-width: 300px;
 $sidebar-min-width: 180px;
 
