--- a/app/containers/Modal/BonekeepModal.scss
+++ b/app/containers/Modal/BonekeepModal.scss
@@ -14,6 +14,10 @@
 .modalPaper {
   background-color: $color-white;
   border-radius: 2px;
+
+  &:focus {
+    outline: none;
+  }
 }
 
 $top-bar-height: 48px;
