--- a/app/containers/Sound/Sound.scss
+++ b/app/containers/Sound/Sound.scss
@@ -1,9 +1,14 @@
 $sound-spacing: 8px;
-$sound-height: 100px;
+
+$base-height: 100px;
+$bottom-bar-height: 5px;
+
+$sound-height: $base-height + $bottom-bar-height;
 
 .sound {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 
   align-items: center;
 
@@ -11,16 +16,22 @@ $sound-height: 100px;
   width: calc(50% - #{$scene-sound-container-padding + $sound-spacing});
   height: $sound-height;
 
-  border: 1px solid $color-black;
-  border-radius: 2px;
-
   &:nth-of-type(odd) {
     margin-right: $sound-spacing;
   }
   margin-bottom: $sound-spacing;
+
+  // Box color
+  box-shadow: 0 1px 3px 1px darken($color-white, 28%);
+  transition: box-shadow 0.2s ease-in-out;
+  border-radius: 2px;
+
+  &:hover {
+    box-shadow: 0 1px 3px 1px darken($color-white, 40%);
+  }
 }
 
-// Split into three sections: left, toggles and volume
+// Split into four sections: left, toggles, volume and bottom
 
 $left-width: 60%;
 $toggles-width: 26%;
@@ -28,15 +39,17 @@ $volume-width: 14%;
 
 /* NAME AND RANDOMNESS */
 .left {
+  $left-margin: 5px;
+
   // Further split into top and bottom: name and randomness
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-left: 5px;
+  margin-left: $left-margin;
 
-  width: $left-width;
-  height: 100%;
+  width: calc(#{$left-width} - #{$left-margin});
+  height: $base-height;
 
   $name-height: 50%;
   $randomness-height: (100% - $name-height);
@@ -67,12 +80,13 @@ $volume-width: 14%;
 
 /* TOGGLES */
 .toggles {
-  width: $toggles-width;
-  height: 100%;
+  $toggles-margin: 5px;
+
+  height: $base-height;
   position: relative;
 
-  // padding: 5px 0;
-  margin-left: 5px;
+  margin-left: $toggles-margin;
+  width: calc(#{$toggles-width} - #{$toggles-margin});
 
   // Order elements and center them
   display: flex;
@@ -105,6 +119,20 @@ $volume-width: 14%;
     min-width: 0 !important;
   }
 
+  .buttonStyleBoxShadow {
+    border: none !important;
+
+    background-color: transparentize($color-black, 1);
+    box-shadow: 0 0 1px 0 darken($color-white, 10%);
+
+    transition: 0.14s ease;
+
+    &:hover {
+      background-color: transparentize($color-black, 0.98);
+      box-shadow: 0 0 4px 0 darken($color-white, 18%);
+    }
+  }
+
   $div-border: 1px solid lighten($color-black, 65%);
 
   // Border styles
@@ -125,13 +153,13 @@ $volume-width: 14%;
   // adding the 'active' class will make the button look active
   .muteToggle {
     &.active {
-      background-color: lighten($color-red, 10%);
+      background-color: lighten($color-red, 16%);
     }
   }
 
   .autoplayToggle {
     &.active {
-      background-color: lighten($color-green, 10%);
+      background-color: lighten($color-green, 14%);
     }
   }
 
@@ -150,4 +178,23 @@ $volume-width: 14%;
 /* VOLUME SLIDER */
 .volume {
   width: $volume-width;
+}
+
+.bottom {
+  width: 100%;
+  height: $bottom-bar-height;
+
+  .randomnessBar {
+    height: 2px;
+    background-color: lighten($color-red, 18%);
+
+    width: 0;
+  }
+
+  .soundProgressBar {
+    height: 3px;
+    background-color: lighten($color-primary-light, 2%);
+
+    width: 0;
+  }
 }
